tests/compile-fail/compile_fail__const_string_to_int.snap
---
source: tests/compile-fail.rs
expression: stderr
---
error: unexpected token `string`
   ┌─ <input>:28:15
   │
28 │         const string x = "hi";
   │               ^^^^^^ unexpected token
   │
   = 
     Expected one of "!=", "%", "%=", "&", "&&", "&=", "(", ")", "*", "*=", "+", "+=", ",", "-", "-=", "/", "/=", ":", ";", "<", "<=", "=", "==", ">", ">=", "?", "@", "[", "]", "^", "^=", "{", "|", "|=" or "||"


